Fix product seller session handling